[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sl_common"
version = "0.1.0"
description = "Common library"
readme = "README.rst"
authors = [
  {name = "Semantic Weapons", email = "dev@semantic.mx"}
]
maintainers = [
  {name = "Semantic Weapons", email = "dev@semantic.mx"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/semanticmx/sl_common/issues"
changelog = "https://github.com/semanticmx/sl_common/blob/master/changelog.md"
homepage = "https://github.com/semanticmx/sl_common"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

